--- a/frontend/front-for-calc/src/styles/styles.css
+++ b/frontend/front-for-calc/src/styles/styles.css
@@ -1,13 +1,28 @@
-.gradient-text {
+/* .gradient-text {
     background: linear-gradient(45deg, #ffffff, #c567a6); 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text; 
-  }
+  } */
 
-  .top-text {
+  /* .top-text {
     background: linear-gradient(900deg, #ffffff, #c567a6); 
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text; 
-  }
+  } */
+
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/phone.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  filter: blur(10px);
+  z-index: -1; /* Помещает размытие позади контента */
+}
