--- a/frontend/front-for-calc/src/styles/styles.css
+++ b/frontend/front-for-calc/src/styles/styles.css
@@ -19,10 +19,11 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('../img/phone.png');
+  font-family: 'Arial, sans-serif';
+  background-image: url('../img/kirpich.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  filter: blur(10px);
+  filter: blur(7px);
   z-index: -1; /* Помещает размытие позади контента */
 }
