--- a/frontend/front-for-calc/src/styles/Main.css
+++ b/frontend/front-for-calc/src/styles/Main.css
@@ -5,13 +5,13 @@ body.home-page::before {
     left: 0;
     width: 100%;
     height: 100%;
-    font-family: 'Arial, sans-serif';
-    background-image: url('../img/minimal.webp');
+    font-family: "Arial, sans-serif";
+    background-image: url("../img/abstr.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: top center;
     background-attachment: fixed;
-    filter: blur(3px);
+    filter: blur(2px);
     z-index: -1;
 }
 
@@ -19,6 +19,22 @@ body.home-page::before {
     body.home-page::before {
         background-position: top center;
         /* background-size: 180%; */
-        filter: blur(3px);
+        filter: blur(2px);
+    }
+}
+
+@keyframes bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
     }
 }
